<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>

    <string name="app_name">GreatCate</string>
    <string name="home_cooking">家常菜</string>
    <string name="cate_details">菜谱详情</string>
    <string name="hint_login_or_register">登录/注册</string>
    <string name="my_collect">我的收藏</string>
    <string name="my_info">我的资料</string>
    <string name="setting">设置</string>
    <string name="contact_us">联系我们</string>
    <string name="login">登录</string>
    <string name="username">用户名:</string>
    <string name="email">邮箱地址:</string>
    <string name="password">密码:</string>
    <string name="login_password">登录密码:</string>
    <string name="sure_password">确认密码:</string>
    <string name="hint_password">请输入密码</string>
    <string name="hint_password_sure">再次输入密码</string>
    <string name="hint_username">请输入用户名</string>
    <string name="hint_email">请输入邮箱地址</string>
    <string name="hint_xuantian">选填</string>
    <string name="forget_password">忘记密码</string>
    <string name="register">注册</string>
    <string name="login_success">登录成功</string>
    <string name="logining">登录中</string>
    <string name="third_party">三方登录</string>
    <string name="login_failed">登录失败</string>
    <string name="username_is_empty">用户名不能为空</string>
    <string name="password_is_empty">密码不能为空</string>
    <string name="email_illegal">邮箱地址不合法</string>
    <string name="password_diffier">两次输入密码不一致</string>
    <string name="register_successed">注册成功</string>
    <string name="exit_click_again">再次点击退出</string>
    <string name="title">title</string>
    <string name="collect">收藏</string>
    <string name="collect_successed">收藏成功</string>
    <string name="collect_failed">收藏失败</string>
    <string name="uncollect_successed">取消收藏成功</string>
    <string name="uncollect_failed">取消收藏失败</string>
    <string name="user_info">个人信息</string>
    <string name="account_and_safe">账户与安全</string>
    <string name="user_setting">个人设置</string>
    <string name="clear_cache">清理缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="check_for_updates">检查更新</string>
    <string name="about">关于</string>
    <string name="login_out">退出登录</string>
    <string name="login_out_successed">退出登录成功</string>
    <string name="basic_info">基本信息</string>
    <string name="account">账户</string>
    <string name="head_portrait">头像</string>
    <string name="nickname">昵称</string>
    <string name="profile">个人简介</string>
    <string name="profile_defualt">一个字都没有~~~</string>
    <string name="bind_account">绑定账号</string>
    <string name="text_email">邮箱</string>
    <string name="text_qq">QQ</string>
    <string name="text_weibo">微博</string>
    <string name="text_wechat">微信</string>
    <string name="add">去添加</string>
    <string name="bind">去绑定</string>
    <string name="text_display">美食</string>
    <string name="text_humor">心情</string>
    <string name="text_mine">我的</string>
    <string name="copyright">Copyright © 2017 GreatCate  All rights reserved</string>
    <string name="nothing">空空如也,赶快去收藏吧~~~</string>
    <string name="latest_version">您现在是最新版本</string>
    <string name="search">搜索</string>
    <string name="hot_search">热搜·hot</string>
    <string name="recently_search">最近·recently</string>
    <string name="hot_1">番茄牛腩</string>
    <string name="hot_2">红烧肉</string>
    <string name="hot_3">土豆</string>
    <string name="back">back</string>
    <string name="confirm">confirm</string>
    <string name="modify_nickname">修改昵称</string>
    <string name="modify_profile">修改个人简介</string>
    <string name="by_take_photo">拍照</string>
    <string name="by_gallery">从图库中选取</string>
    <string name="operation_error">操作失败</string>
    <string name="cannot_find_sd">sd卡状态异常</string>
    <string name="loading">正在加载</string>
    <string name="hint_message">说些什么吧~~~</string>
    <string name="upload">上传</string>
    <string name="uploading">正在上传</string>

</resources>