<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white_bg"
    >

    <cn.zhouzy.greatcate.common.view.NoScrollViewPager
        android:id="@+id/viewpager_main_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
    </cn.zhouzy.greatcate.common.view.NoScrollViewPager>

    <cn.zhouzy.greatcate.common.view.RippleView
        android:id="@+id/rippleview_main_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        app:rv_color="@color/LightGrey">

        <RadioGroup
            android:id="@+id/rg_main_bottom_radiogroup"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_94dp"
            android:background="@color/white_light"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rb_main_cate"
                style="@style/rb_checked_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:checked="true"
                android:drawableTop="@drawable/rb_cook_selector"
                android:text="@string/text_display"/>

            <RadioButton
                android:id="@+id/rb_main_humor"
                style="@style/rb_checked_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/rb_humor_normal"
                android:text="@string/text_humor"/>

            <RadioButton
                android:id="@+id/rb_main_mine"
                style="@style/rb_checked_style"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:drawableTop="@drawable/rb_mine_selector"
                android:text="@string/text_mine"/>
        </RadioGroup>
    </cn.zhouzy.greatcate.common.view.RippleView>

</RelativeLayout>